--- a/estilos.CSS
+++ b/estilos.CSS
@@ -98,6 +98,115 @@ body {
     max-width: 700px;
 }
 
+/* Estilos para sección de citas */
+#citas {
+    background-color: #F2F6F6;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20%;
+}
+
+#citas label {
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    color: #000000;
+    text-transform: uppercase;
+}
+
+#citas input {
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    border: none;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 8px;
+    color: #000000;
+}
+
+#citas input::placeholder {
+    color: #9E9A9A;
+}
+
+#servicios {
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    gap: 134px;
+    flex-wrap: wrap;
+    background-color: #ffffff;
+}
+
+#servicios article {
+    width: 335px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    overflow: hidden;
+    border-radius: 15px 15px 0 0;
+    justify-content: space-between;
+}
+
+#servicios h3 {
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    font-size: 32px;
+    color: #ffffff;
+    background-color: #A3A656;
+    margin: 0;
+    padding: 20px;
+}
+
+#servicios img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    display: block;
+}
+
+#servicios p {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #000000;
+    text-align: left;
+    margin: 20px 0;
+}
+
+#servicios .precio-boton {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #ffffff;
+    margin-top: auto;
+}
+
+#servicios .precio {
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+    font-size: 48px;
+    color: #000000;
+}
+
+#servicios button {
+    background-color: #A3A656;
+    color: #ffffff;
+    border: none;
+    border-radius: 35px;
+    padding: 15px 30px;
+    cursor: pointer;
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    text-transform: uppercase;
+    white-space: nowrap;
+}
+
+#servicios button:hover {
+    background-color: #384001;
+}
 
 /* Estilos para suscripciones */
 #subscripciones {
